@@ -65,10 +65,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <release>17</release>
+          <release>20</release>
           <compilerArgs>
-            <arg>--add-modules</arg>
-            <arg>jdk.incubator.foreign</arg>
+            <arg>--enable-preview</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -77,7 +76,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
         <configuration>
-          <argLine>--enable-preview --add-modules jdk.incubator.foreign --enable-native-access ALL-UNNAMED</argLine>
+          <argLine>--enable-preview --enable-native-access ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
     </plugins>
